Prashant Revised 01/30/2017 - Revised issues and introduction to UOB

--- a/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/overview.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/overview.xhtml
@@ -167,6 +167,7 @@
                                                     <p:column footerText="" style="text-align:left"/>
 
                                                     <p:column footerText="Total" style="text-align:left;"/>
+                                                    <p:column priority="5" footerText="" style="text-align:left"/>
                                                     <p:column priority="2" footerText="" style="text-align:left;"/>
                                                     <p:column priority="5" footerText="" style="text-align:left;"/>
                                                     <p:column priority="2" footerText="" style="text-align:left"/>
