Prashant Revised 01/31/2017 - PREUAT fixes

--- a/Invessence/modules/web/src/main/webapp/activate.xhtml
+++ b/Invessence/modules/web/src/main/webapp/activate.xhtml
@@ -5,6 +5,7 @@
                 xmlns:p="http://primefaces.org/ui"
                 template="/template/common/simple.xhtml">
     <f:metadata>
+        <f:event listener="#{sessionControl.preRenderView}" type="preRenderView"/>
         <f:viewParam name="l" value="#{userBean.beanLogonID}"/>
         <f:viewParam name="e" value="#{userBean.beanEmail}"/>
         <f:viewParam name="r" value="#{userBean.beanResetID}"/>
