--- a/Invessence/modules/web/src/main/webapp/pages/custody/td/editfunding.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/custody/td/editfunding.xhtml
@@ -70,7 +70,7 @@
                         <p:selectBooleanCheckbox
                                 styleClass="RegulatoryCheckBox"
                                 value="#{tdEditFund.tdMasterData.optFund}"
-                                itemLabel="I choose to opt-out one time funding for now.">
+                                itemLabel="I choose to opt-out of one time funding at this time.">
                             <p:ajax update=":ctoForm:tdaccordian:fundTabV,:ctoForm:submitBtnId" process="@this"
                                     listener="#{tdEditFund.optoutFundingChange}" />
 
