--- a/Invessence/modules/web/src/main/webapp/login.xhtml
+++ b/Invessence/modules/web/src/main/webapp/login.xhtml
@@ -6,6 +6,7 @@
                 template="/template/common/simple.xhtml">
 
     <f:metadata>
+        <f:event listener="#{sessionControl.preRenderView}" type="preRenderView"/>
         <f:event listener="#{loginController.updateMessages}" type="preRenderView"/>
     </f:metadata>
 
