--- a/Invessence/modules/web/src/main/webapp/mobile.xhtml
+++ b/Invessence/modules/web/src/main/webapp/mobile.xhtml
@@ -6,8 +6,7 @@
                 template="/template/common/simple.xhtml">
 
 <f:metadata>
-    <f:viewParam name="cid" value="#{uiLayout.cid}"/>
-    <f:event type="preRenderView" listener="#{uiLayout.preRenderView}"/>
+    <f:event listener="#{sessionControl.preRenderView}" type="preRenderView"/>
 </f:metadata>
 
 <ui:define name="content">
@@ -31,9 +30,10 @@
                     <div class="Seperator"></div>
                     <div class="EmptyBox10"></div>
                     <p:button value="Login" styleClass="loginStartedBtn Fs16" href="/login.xhtml"/>
-                    <p:button  value="Register" styleClass="Fs16 OrangeButton" href="/signup.xhtml"/>
-                    
-                    
+                    <!--
+                        <p:button  value="Register" styleClass="Fs16 OrangeButton" href="/signup.xhtml"/>
+                    -->
+
                     <div class="EmptyBox50"></div>
                 </h:form>
             </div>
