Checked in 02/01/2017  - Prakash Lal

--- a/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd.xhtml
@@ -19,6 +19,8 @@
         <h:outputScript name="js/highcharts-3d.js" library="#{uiLayout.webProfile.cssdir}"/>
         <h:outputScript name="js/highcharts-more.js" library="#{uiLayout.webProfile.cssdir}"/>
         <h:outputScript name="js/exporting.js" library="#{uiLayout.webProfile.cssdir}"/>
+            <h:outputScript name="js/drilldown.js" library="#{uiLayout.webProfile.cssdir}"/>
+            <h:outputScript name="js/data.js" library="#{uiLayout.webProfile.cssdir}"/>
         <!-- HighChart .js plugin End -->
 
         <!-- BOX START -->
