--- a/Invessence/modules/web/src/main/webapp/pages/advisor/pendingAdv.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/advisor/pendingAdv.xhtml
@@ -82,7 +82,7 @@
                                 <div style="width: 100%; text-align: left;" class="centerAlign ForBtnNormal">
                                     <p:commandButton update="@form" ajax="true" value="Delete"
                                                      actionListener="#{manageAdvisorBean.doDelete()}" styleClass="AdvNormalBtn">
-                                        <p:confirm header="Confirmation" message="Do you want to delete this accounts?" icon="ui-icon-alert" >
+                                        <p:confirm header="Confirmation" message="Do you want to delete these accounts?" icon="ui-icon-alert" >
 
                                         </p:confirm>
                                     </p:commandButton>
