--- a/Invessence/modules/web/src/main/webapp/pages/advisor/trade.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/advisor/trade.xhtml
@@ -16,7 +16,7 @@
 <div class="Container100">
 <h:form id="tradeForm">
 <p:growl id="growltrademsg" closable="true" style="top: 25%"/>
-<p:tabView cache="true" dynamic="true">
+<p:tabView cache="true" dynamic="true" styleClass="AdvTabNBWidget">
 <p:tab title="Select">
     <p:panelGrid id="rebalgrid2" styleClass="invNBgrid">
         <p:row>
@@ -38,53 +38,62 @@
         </p:row>
     </p:panelGrid>
     <p:dataTable id="dataGrid" var="filteredData" value="#{tradeBean.filteredClientList}"
-                 border="1" styleClass="invAdminTable"
+                 border="1" styleClass="AdvisorGridtcmLayout"
                  sortMode="multiple"
+                 reflow="true"
                  rowKey="#{filteredData.acctnum}"
                  selection="#{tradeBean.selectedClientList}">
         <f:facet name="header" style="text-align: left;">
-            Choose Accounts to trade.
+            <div style="width: 100%; text-align: left;" class="centerAlign ForBtnNormal">
+                <p:commandButton update="@form" ajax="true" value="Delete"
+                                 actionListener="#{manageAdvisorBean.doDelete()}" styleClass="AdvNormalBtn">
+                    <p:confirm header="Confirmation" message="Do you want to delete these accounts?" icon="ui-icon-alert" >
+
+                    </p:confirm>
+                </p:commandButton>
+            </div>
         </f:facet>
 
-        <p:column selectionMode="multiple" style="width:5%"/>
+        <p:column selectionMode="multiple" styleClass="multipleSelectionChkList" style="width:50px;text-align:center" resizable="true"/>
 
-        <p:column style="width:7%">
+        <p:column styleClass="AdvtcmLayoutColumn" resizable="true">
             <p:commandButton id="editButton"
+                             styleClass="editAdvButton"
                              process="@this" immediate="true"
-                             icon="ui-icon-pencil"
+                             value="Edit"
                              action="#{tradeBean.doManagedAction}">
                 <f:setPropertyActionListener value="#{filteredData}"
                                              target="#{tradeBean.selectedClient}"/>
             </p:commandButton>
         </p:column>
 
-        <p:column headerText="InvAcc#" style="width:7%"
+        <p:column headerText="InvAcc#" styleClass="AdvtcmLayoutColumn" style="" resizable="true"
                   sortBy="#{filteredData.acctnum}">
             #{filteredData.acctnum}
         </p:column>
 
-        <p:column headerText="IBAcct#" style="width:10%"
+        <p:column headerText="IBAcct#" styleClass="AdvtcmLayoutColumn" resizable="true" style=""
                   sortBy="#{filteredData.clientAccountID}">
             #{filteredData.clientAccountID}
         </p:column>
 
-        <p:column headerText="Name" style="width:20%"
+        <p:column headerText="Name" styleClass="AdvtcmLayoutColumn" resizable="true" style=""
                   sortBy="#{filteredData.name}">
             #{filteredData.name}
         </p:column>
 
-        <p:column headerText="Type" style="width:13%"
+        <p:column headerText="Type" styleClass="AdvtcmLayoutColumn" resizable="true" style=""
                   sortBy="#{filteredData.accountType}">
             #{filteredData.accountType}<br/>
             #{filteredData.cashMargin}
         </p:column>
 
-        <p:column headerText="Reason" style="width:10%; text-align: left"
+        <p:column headerText="Reason" styleClass="AdvtcmLayoutColumn" resizable="true" style=""
                   sortBy="#{filteredData.reason}">
             #{filteredData.reason}
         </p:column>
 
-        <p:column headerText="Traded" style="width:10%; text-align: left"
+        <p:column headerText="Traded" styleClass="AdvtcmLayoutColumn" resizable="true" style=""
                   sortBy="#{filteredData.lastTraded}">
             #{filteredData.lastTraded}
         </p:column>
@@ -95,14 +104,14 @@
         -->
 
 
-        <p:column headerText="Cash" style="width:7%; text-align: right"
+        <p:column headerText="Cash" styleClass="AdvtcmLayoutColumn" resizable="true" style=""
                   sortBy="#{filteredData.keepLiquid}">
             <h:outputText value="#{filteredData.keepLiquid}">
                 <f:convertNumber type="currency" currencySymbol="$"/>
             </h:outputText>
         </p:column>
 
-        <p:column headerText="Investment" style="width:15%; text-align: right"
+        <p:column headerText="Investment" styleClass="AdvtcmLayoutColumn" resizable="true" style=""
                   sortBy="#{filteredData.actualInvestment}">
             <h:outputText value="#{filteredData.actualInvestment}">
                 <f:convertNumber type="currency" currencySymbol="$"/>
