--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/cEdit.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/cEdit.xhtml
@@ -11,7 +11,7 @@
 				<p:panel id="inputArea" style="border: 0px"
 					styleClass="uob_Block_tabs">
 					<p:tabView id="pTabView" activeIndex="#{uobpb.pTab}"
-						styleClass="Container100 uob_ceditTab_Block" orientation="top"
+						styleClass="Container100 NBwidget" orientation="top"
 						dynamic="false" cache="false" effect="slide" effectDuration="fast">
 						<p:ajax event="tabChange"
 							update=":ceForm:inputArea, :ceForm:graphArea"
