Checked in 06/02/2017 (UOB)

--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/cadd.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/cadd.xhtml
@@ -425,7 +425,7 @@
 							</div>
 
                                            <div
-								class="Wid45 BorderedBox Fright TexAlCenter Mar10 MarLeft5 uob_Box1">
+								class="Wid45 BorderedBox Fright TexAlCenter Mar10 MarLeft5 uob_Box">
 								<div class="ContainerIndent">
 									<div class="EmptyBox5"></div>
 									<span class="Fs14 DispBlock gray">Expected Return</span> <span
