--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/cEdit.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/cEdit.xhtml
@@ -74,6 +74,10 @@
 		<div class="Container50 Fleft Responsive100">
 			<div class="ContainerIndent">
 				<p:panel id="graphArea" style="border: 0px; background: white;">
+					<p:tabView id="pTabView1" activeIndex="0"
+							   styleClass="Container100 NBwidget" orientation="top"
+							   dynamic="false" cache="false" effect="slide" effectDuration="fast">
+					<p:tab id="summarytab" title="Summary">
 					<div class="Container100 Responsive100">
 						<p:panel id="grphhdr" style="border: 0px; background: transparent"
 							rendered="#{uobpb.hasReturn}">
@@ -93,7 +97,7 @@
 							</div>
 
 							<div
-								class="Wid45 BorderedBox Fright TexAlCenter Mar10 MarLeft5 uob_Box1">
+								class="Wid45 BorderedBox Fright TexAlCenter Mar10 MarLeft5 uob_Box">
 								<div class="ContainerIndent">
 									<div class="EmptyBox5"></div>
 									<span class="Fs14 DispBlock gray">Expected Return</span> <span
@@ -108,44 +112,77 @@
 							</div>
 						</p:panel>
 					</div>
+						<div class="Container100">
+							<p:chart type="pie" model="#{uobpb.charts.pieChart}"
+									 rendered="#{uobpb.charts.pieChart != null}" responsive="true" />
+						</div>
+				</p:tab>
+						<p:tab id="detailstab" title="Details">
+							<!--<div class="ContainerIndent">
+								<p:dataTable styleClass="uob_graphTable"
+											 value="#{uobpb.editableAsset}" var="assetList">
 
-					<div class="Container100 Responsive100">
-						<p:outputPanel id="charts" style="border: 0px">
-							<div class="Container50  Fleft Responsive100">
-								<!-- PRAKASH's CHANGE -->
-								<div class="Container100">
-									<p:chart type="pie" model="#{uobpb.charts.pieChart}"
-										rendered="#{uobpb.charts.pieChart != null}" responsive="true" />
-								</div>
-							</div>
-							<div class="Container50 Fleft Responsive100">
-								<!-- PRAKASH's CHANGE -->
-								<div class="ContainerIndent">
-									<p:dataTable styleClass="uob_graphTable"
-										value="#{uobpb.editableAsset}" var="assetList">
-
-										<p:column
+									<p:column
 											style="width: 2%; background-color: #{assetList.color};">
-											<h:outputText value=" " />
-										</p:column>
+										<h:outputText value=" " />
+									</p:column>
 
-										<p:column styleClass="Wid40 Fs12 TexAlLeft" resizable="true"
-											headerText="Asset">
-											<!-- PRAKASH's CHANGE -->
-											<h:outputText value="#{assetList.asset}" />
-										</p:column>
-										<p:column styleClass="Wid40 Fs12 num-text-align TexAlRight"
-											resizable="true" headerText="Weight">
-											<!-- PRAKASH's CHANGE -->
-											<h:outputText value="#{assetList.userEdit}">
-												<f:convertNumber pattern="##0.00%" />
-											</h:outputText>
-										</p:column>
-									</p:dataTable>
-								</div>
+									<p:column styleClass="Wid40 Fs12 TexAlLeft" resizable="true"
+											  headerText="Asset">
+										&lt;!&ndash; PRAKASH's CHANGE &ndash;&gt;
+										<h:outputText value="#{assetList.asset}" />
+									</p:column>
+									<p:column styleClass="Wid40 Fs12 num-text-align TexAlRight"
+											  resizable="true" headerText="Weight">
+										&lt;!&ndash; PRAKASH's CHANGE &ndash;&gt;
+										<h:outputText value="#{assetList.userEdit}">
+											<f:convertNumber pattern="##0.00%" />
+										</h:outputText>
+									</p:column>
+								</p:dataTable>
+							</div>-->
+							<div class="ContainerIndent">
+								<p:dataTable styleClass="uob_graphTable"
+											 value="#{uobpb.editableAsset}"
+											 var="assetList">
+
+									<p:column style="width: 1%; background-color: #{assetList.color};">
+										<h:outputText value=" "/>
+									</p:column>
+
+									<p:column styleClass="Wid40 Fs12 TexAlLeft"
+											  headerText="Asset">
+										<h:outputText value="#{assetList.asset}"/>
+									</p:column>
+									<p:column styleClass="Wid20 Fs12 num-text-align TexAlRight"
+											  headerText="Weight"><!-- ROHIT's CHANGE -->
+										<h:outputText value="#{assetList.userEdit}">
+											<f:convertNumber pattern="##0.00%"/>
+										</h:outputText>
+									</p:column>
+									<p:column styleClass="Wid30 Fs12 num-text-align TexAlRight"
+											  headerText="Value"><!-- ROHIT's CHANGE -->
+										<h:outputText value="#{assetList.value}">
+											<f:convertNumber currencySymbol="$" type="currency"/>
+										</h:outputText>
+									</p:column>
+									<p:columnGroup type="footer">
+										<p:row>
+											<p:column colspan="3" styleClass="Fs12 TexAlLeft FontBold"
+													  footerText="Total">
+											</p:column>
+											<p:column styleClass="Fs12 TexAlRight FontBold"
+													  footerText="#{dataDisplayConverter.displayAsMoney(uobpb.totalMoneyAllocated)}">
+											</p:column>
+										</p:row>
+									</p:columnGroup>
+								</p:dataTable>
 							</div>
-						</p:outputPanel>
-					</div>
+						</p:tab>
+					</p:tabView>
+
+
+
 				</p:panel>
 			</div>
 		</div>
