--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/income.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/income.xhtml
@@ -10,8 +10,8 @@
                             styleClass="Container100 Responsive100"
                      style="border:0px !important; background:none;">
                     <div class="TexAlLeft Wid100">
-                        <div>Salary/Wages (Yearly)</div>
-                        <div style="font-size: small;">(Total Gross Income)</div>
+                        <div class="uobBoldText">Salary/Wages (Yearly)</div>
+                        <div class="uobSubText">(Total Gross Income)</div>
                     </div>
                     <p:inputNumber value="#{uobpb.householdwages}" styleClass="Wid100 uob_number_field"
                                     maxlength="15" decimalPlaces="0" symbol="$">
@@ -19,9 +19,9 @@
                                 update=":ceForm:workArea, :ceForm:graphArea"/>
                     </p:inputNumber>
 
-                    <div class="Wid100">
-                        Liquid Asset<br/>
-                        <span style="font-size: small;">(Cash/Savings Account, etc.)</span>
+                    <div class="TexAlLeft Wid100">
+                    <div class="uobBoldText"> Liquid Asset</div>
+                        <div class="uobSubText">(Cash/Savings Account, etc.)</div>
                     </div>
                     <p:inputNumber value="#{uobpb.moneymarket}" styleClass="Wid100 uob_number_field"
                                     maxlength="15" decimalPlaces="0" symbol="$">
@@ -31,9 +31,9 @@
                     <!-- <h:outputText/>
                     <h:outputText/> -->
 
-                    <div class="Wid100">
-                        Other Investments<br/>
-                        <span style="font-size: small;">(Stocks, Bond, Retirement)</span>
+                    <div class="TexAlLeft Wid100">
+                    <div class="uobBoldText">Other Investments</div>
+                        <div class="uobSubText">(Stocks, Bond, Retirement)</div>
                     </div>
                     <p:inputNumber value="#{uobpb.investment}" styleClass="Wid100 uob_number_field"
                                     maxlength="15" decimalPlaces="0" symbol="$">
