--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/cadd.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/cadd.xhtml
@@ -15,6 +15,15 @@
     <ui:define name="content">
         <h:outputScript name="js/invCharts.js" library="#{uiLayout.webProfile.cssdir}"/>
 
+        <!-- HighChart .js plugin Start -->
+        <h:outputScript name="js/highcharts.js" library="#{uiLayout.webProfile.cssdir}"/>
+        <h:outputScript name="js/highcharts-3d.js" library="#{uiLayout.webProfile.cssdir}"/>
+        <h:outputScript name="js/highcharts-more.js" library="#{uiLayout.webProfile.cssdir}"/>
+        <h:outputScript name="js/exporting.js" library="#{uiLayout.webProfile.cssdir}"/>
+        <h:outputScript name="js/drilldown.js" library="#{uiLayout.webProfile.cssdir}"/>
+        <h:outputScript name="js/data.js" library="#{uiLayout.webProfile.cssdir}"/>
+        <!-- HighChart .js plugin End -->
+
         <!-- BOX START -->
         <h:form id="ceForm">
             <p:growl id="caddgrowl" showDetail="true" sticky="true" escape="true"/>
