--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/core0.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/core0.xhtml
@@ -15,7 +15,7 @@
                              styleClass="Wid100 uob_selectDropdown"
                              required="true" requiredMessage="Please choose investment strategy" >
                 <p:ajax listener="#{uobpb.onGoalChangeValue}"
-                        update=":ceForm:workArea, :ceForm:displayInfo, :ceForm:graphArea"/>
+                        update=":ceForm:workArea, :ceForm:graphArea"/>
                 <f:selectItem itemLabel="Choose One" itemValue=""/>
                 <f:selectItem itemLabel="Retirement" itemValue="Retirement"/>
                 <f:selectItem itemLabel="College" itemValue="College"/>
@@ -35,7 +35,7 @@
                             value="#{uobpb.initialInvestment}"
                             maxlength="11" decimalPlaces="0" symbol="$">
                 <p:ajax listener="#{uobpb.onChangeValue}"
-                        update=":ceForm:workArea, :ceForm:displayInvestment, :ceForm:graphArea"/>
+                        update=":ceForm:workArea, :ceForm:graphArea"/>
             </p:inputNumber>
 
         </p:panelGrid>
