--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/cadd.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/cadd.xhtml
@@ -29,79 +29,30 @@
             <p:growl id="caddgrowl" showDetail="true" sticky="true" escape="true"/>
 
 
-            <p:outputPanel id="workArea" styleClass="layout-portlets-box NBwidget ">
+            <p:outputPanel id="workArea" styleClass="NBwidget ">
 
 
-                <div class="Container100 Responsive100 t1 uob_block1">
+                <div class="Container100 Responsive100 t1 uob_block1 layout-portlets-box">
                     <div class="ContainerIndent">
-                        <p:fieldset id="personalize" legend="Personalize" toggleable="true" toggleSpeed="500">
+                        <div class="uobCustomMainBlock">
+                            <div class="uobCMBLabel" style="width: 110px;"><i class="fa fa-caret-down" aria-hidden="true"></i> Personalise</div>
                             <ui:include src="/pages/consumer/uob/addon/cEdit.xhtml"/>
-                        </p:fieldset>
+                        </div>
                     </div>
                 </div>
 
 
-                <div class="Container100 Responsive100 t1 uob_block1">
+                <div class="Container100 Responsive100 t1 uob_block1 layout-portlets-box">
                     <div class="ContainerIndent">
-                        <p:fieldset legend="Summary" toggleable="true" toggleSpeed="500">
-                            <div class="Container100 Responsive100">
+                        <div class="uobCustomMainBlock">
+                            <div class="uobCMBLabel" style="width: 140px;"><i class="fa fa-caret-down" aria-hidden="true"></i> Asset Allocation</div>
+                           <!-- <div class="Container100 Responsive100">
                                 <div class="Wid100 Responsive100 Fleft">
                                     <h3 class="Title_uob">
                                         Asset Allocation
                                     </h3>
                                 </div>
-                            </div>
-                            <div class="Container100">
-                                <div class="ContainerIndent">
-                                    <div class="Container50 Responsive50 TexAlCenter Fs16">
-                                        <div class="Container100 Fleft TexAlCenter Fs16">
-                                            <div class="ContainerIndent Fs14 textAleft">
-                                                <i class="fa fa-caret-right"
-                                                   aria-hidden="true"></i> Based on your answers, here is your recommended asset allocation.
-                                            </div>
-                                        </div>
-                                        <div class="EmptyBox20"></div>
-                                    </div>
-                                    <div class="Container50 Responsive50">
-                                        <div class="Container100 Fleft TexAlCenter Fs16">
-                                            <div class="ContainerIndent Fs14 textAleft">
-                                                <i class="fa fa-caret-right"
-                                                   aria-hidden="true"></i> You can adjust the risk level of your asset allocation with this slider.
-                                            </div>
-                                        </div>
-                                        <div class="EmptyBox10"></div>
-                                        <div class="Container100 DispBlock gray">
-                                            <div class="EmptyBox5"></div>
-                                            <div class="Container25 TexAlRight Fs14 uobSliderLabel">
-                                                Conservative
-                                            </div>
-                                            <div class="Container50 TexAlCenter Fs20">
-                                                <h:inputHidden id="allocValue" value="#{uobpb.allocationIndex}"/>
-                                                <p:slider id="allocSlider" for="allocValue" minValue="0" maxValue="#{uobpb.maxAssetAllocatonPoints}"
-                                                          step="1">
-                                                    <p:ajax event="slideEnd"
-                                                            update=":ceForm:workArea, :ceForm:graphArea"
-                                                            listener="#{uobpb.onAllocSlider}"/>
-                                                </p:slider>
-                                            </div>
-                                            <div class="Container25 TexAlLeft Fs14 uobSliderLabel">
-                                                Aggressive
-                                            </div>
-                                            <div class="EmptyBox5"></div>
-                                            <div class="Container100 TexAlCenter">
-                                                <div class="ContainerIndent">
-                                                    <p:commandButton id="allocSliderResetButton" value="Recommended"
-                                                                     update=":ceForm:workArea, :ceForm:graphArea"
-                                                                     actionListener="#{uobpb.doAllocReset}">
-                                                    </p:commandButton>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                </div>
-                            </div>
-
+                            </div>-->
                             <div class="Container100 Responsive100">
                                 <div class="ContainerIndent">
                                     <div class="Container50 Responsive50 Fleft">
@@ -157,19 +108,73 @@
                                     </div>
                                 </div>
                             </div>
-                        </p:fieldset>
+                            <div class="Container100">
+                                <div class="ContainerIndent">
+                                    <div class="Container50 Responsive50 TexAlCenter Fs16">
+                                        <div class="Container100 Fleft TexAlCenter Fs16">
+                                            <div class="ContainerIndent Fs12 textACenter" style="padding: 0px 10px!important;">
+                                                (Based on your answers, here is your recommended asset allocation.)
+                                            </div>
+                                        </div>
+                                        <div class="EmptyBox20"></div>
+                                    </div>
+                                    <div class="Container50 Responsive50">
+
+
+                                        <div class="Container100 DispBlock gray">
+                                            <div class="EmptyBox5"></div>
+                                            <div class="Container25 TexAlRight Fs14 uobSliderLabel">
+                                                Conservative
+                                            </div>
+                                            <div class="Container50 TexAlCenter Fs20">
+                                                <h:inputHidden id="allocValue" value="#{uobpb.allocationIndex}"/>
+                                                <p:slider id="allocSlider" for="allocValue" minValue="0" maxValue="#{uobpb.maxAssetAllocatonPoints}"
+                                                          step="1">
+                                                    <p:ajax event="slideEnd"
+                                                            update=":ceForm:workArea, :ceForm:graphArea"
+                                                            listener="#{uobpb.onAllocSlider}"/>
+                                                </p:slider>
+                                            </div>
+                                            <div class="Container25 TexAlLeft Fs14 uobSliderLabel">
+                                                Aggressive
+                                            </div>
+                                            <div class="EmptyBox5"></div>
+                                            <div class="Container100 TexAlCenter">
+                                                <div class="ContainerIndent">
+                                                    <div class="EmptyBox10"></div>
+                                                    <p:commandButton id="allocSliderResetButton" value="Recommended"
+                                                                     styleClass="uob_button"
+                                                                     update=":ceForm:workArea, :ceForm:graphArea"
+                                                                     actionListener="#{uobpb.doAllocReset}">
+                                                    </p:commandButton>
+                                                </div>
+                                                <div class="Container100 Fleft TexAlCenter">
+                                                    <div class="ContainerIndent Fs12 textACenter" style="padding: 0px 10px!important; color: black;">
+                                                        (You can adjust the risk level of your asset allocation with this slider.)
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                </div>
+                            </div>
+
+
+                        </div>
                     </div>
                 </div>
-                <div class="Container100 Responsive100 t1 uob_block1">
+                <div class="Container100 Responsive100 t1 uob_block1 layout-portlets-box">
                     <div class="ContainerIndent">
-                        <p:fieldset legend="Detail" toggleable="true" toggleSpeed="500">
-                            <div class="Container100 Responsive100">
+                        <div class="uobCustomMainBlock">
+                            <div class="uobCMBLabel" style="width: 140px;"><i class="fa fa-caret-down" aria-hidden="true"></i> Portfolio Details</div>
+                           <!-- <div class="Container100 Responsive100">
                                 <div class="Wid100 Responsive100 Fleft">
                                     <h3 class="Title_uob">
                                         Portfolio Details
                                     </h3>
                                 </div>
-                            </div>
+                            </div>-->
                             <p:outputPanel style="border: 0px; background: transparent" rendered="#{! uobpb.fixedModel}">
                                 <div class="Container100">
                                     <div class="ContainerIndent">
@@ -293,10 +298,10 @@
 
                                 </div>
                             </div>
-                        </p:fieldset>
+                        </div>
                     </div>
                 </div>
-                <div class="Container100 Responsive100 t1 uob_block1">
+                <div style="display: none;" class="Container100 Responsive100 t1 uob_block1 layout-portlets-box">
                     <div class="ContainerIndent">
                         <p:fieldset legend="Goal Planning" rendered="false"
                                     collapsed="true"
