Checked in 2/13/2017 - Revised Asset class to work with User,allocated, and actual

--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/cadd.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/cadd.xhtml
@@ -174,7 +174,7 @@
                                     </h3>
                                 </div>
                             </div>-->
-                            <p:outputPanel style="border: 0px; background: transparent" rendered="#{! uobpb.fixedModel}">
+                            <p:outputPanel style="border: 0px; background: transparent" rendered="false">
                                 <div class="Container100">
                                     <div class="ContainerIndent">
                                         <div class="Container50 Responsive50 TexAlCenter Fs16">
