--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/index.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/index.xhtml
@@ -262,7 +262,7 @@
                                                                     <p:commandButton id="editPortfolioButton"
                                                                                      styleClass="Fs14 OrangeButton" process="@this"
                                                                                      immediate="true" icon="fa fa-pie-chart Fs14 white"
-                                                                                     action="#{uobdash.doSelectedAction}">
+                                                                                     action="#{uobdash.doPortfolioSelectedAction}">
                                                                         <f:setPropertyActionListener value="#{investment}"
                                                                                                      target="#{uobdash.selectedAccount}"/>
                                                                     </p:commandButton>
