Prashant Revised 02/03/2017 - UOB Code Calculator fix

--- a/Invessence/modules/web/src/main/webapp/demo.xhtml
+++ b/Invessence/modules/web/src/main/webapp/demo.xhtml
@@ -52,6 +52,7 @@
                         <div class="EmptyBox20"></div>
                         <p:button  value="GetStarted" styleClass="Fs16 BlueButton" href="/getstarted.xhtml"></p:button>
                         <p:button  value="Login" styleClass="Fs16 OrangeButton" href="/"></p:button>
+                        <p:commandButton  value="Reset" styleClass="Fs16 OrangeButton" actionListener="#{sessionControl.reset}"></p:commandButton>
                         <div class="EmptyBox50"></div>
                     </h:form>
                 </div>
