Checked in 2/13/2017 - Revised Asset class to work with User,allocated, and actual

--- a/Invessence/modules/web/src/main/webapp/getstarted.xhtml
+++ b/Invessence/modules/web/src/main/webapp/getstarted.xhtml
@@ -9,6 +9,7 @@
 
 <f:metadata>
     <f:event listener="#{uiLayout.preRenderView}" type="preRenderView" />
+    <f:viewParam name="rep" value="#{sessionControl.rep}"/>
 </f:metadata>
 
 <h:head>
