--- a/Invessence/modules/web/src/main/webapp/index.xhtml
+++ b/Invessence/modules/web/src/main/webapp/index.xhtml
@@ -4,6 +4,9 @@
                 xmlns:ui="http://java.sun.com/jsf/facelets"
                 xmlns:p="http://primefaces.org/ui"
                 template="/template/common/simple.xhtml">
+    <f:metadata>
+        <f:event listener="#{sessionControl.preRenderView}" type="preRenderView"/>
+    </f:metadata>
 
     <ui:define name="content">
         <div class="EmptyBox50"></div>
